# reticape

./: .gitignore  README.md  pyproject.toml
modelling/MLP/notebooks/: 180_cRounded.ipynb  dibulatkan_a.ipynb
modelling/MLP/notebooks/.ipynb_checkpoints/: 180_cOrigin-checkpoint.ipynb  180_cRounded-checkpoint.ipynb  dibulatkan_a-checkpoint.ipynb
reticape/: 180_b.ipynb
