[tool.poetry]
name = "reticape"
version = "0.1.0"
description = ""
authors = ["tsdhrm <tsdhrm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
pandas = "^1.5.1"
opencv-python = "^4.6.0.66"
scikit-image = "^0.19.3"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
shapely = "^1.8.5.post1"
jupyterlab = "^3.5.0"
ipykernel = "^6.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
